--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,16 @@
-.App {
+.pendu {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.letters {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  width: 426px;
+  margin: 20px auto auto auto;
+  padding: 10px 10px 20px 10px;
+  border: 1px #000000 solid;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remake-button {
+    margin-left: 130px;
 }
