--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,21 @@
   border: 1px #000000 solid;
 }
 
-.remake-button {
-    margin-left: 130px;
+.remake {
+  width: 100%;
+}
+
+.score_calculation {
+  text-align: center;
+  width: 100%;
+  border-top: 1px #cccccc solid;
+  margin-top: 10px;
+}
+
+.score_calculation > table {
+  margin: auto;
+}
+
+.score_calculation > table td {
+  text-align: left;
 }
